deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-of-deployment
spec:
  selector:
    matchLabels:
      app: name-of-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: name-of-deployment
    spec:
      containers:
      - name: name-of-deployment
        image: image-path:$(Build.BuildId) 
        resources:
             requests:
               memory: "64Mi"
               cpu: "250m"
             limits:
               memory: "128Mi"
               cpu: "500m"
        ports:
          - containerPort: 443
