service.yaml
apiVersion: v1
kind: Service
metadata:
  name: name of service
spec:
  selector:
    app: name of service
  type: 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
